# waterbot

./: .gitignore  LICENSE  Makefile  README.md  example.config.yaml  pyproject.toml
backend/: backend_main.py  bot_logic.py  db.py  db_cd_test.py  db_live_test.py  sync_config.py  utils.py
code/: blink.py  private_const.py.example
iot_code/: const.py  main.py  scan_wifi.py  sensor_send.py  simple_weight.py  utils.py
iot_code/drivers/: hx711.py
